[tool.poetry]
name = "Interlocking-Logic-Monitor"
version = "1.0"
description = "The Interlogic Logic Monitor is a evaluation tool for the interlocking logic"
authors = ["Arne Boockmeyer <arne.boockmeyer@hpi.de>"]
readme = "README.md"
packages = [{include = "interlockinglogicmonitor"}]

[tool.poetry.dependencies]
python = "^3.11"
pyproj = "^3.4.1"
yaramo = "^0.1.0"
interlocking = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.10"
pre-commit = "^3.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.pylint.format]
max-line-length = "100"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
